--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -55,7 +55,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Login.xaml.cs">
+      <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Zitting.cs" />
+    <Page Include="Login.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -104,6 +111,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\paz.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Login_bg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\LoginButtonBg.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
