--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -55,15 +55,26 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Login.xaml.cs">
+    <Compile Include="Control\ControllerIO.cs" />
+    <Compile Include="Control\PAZController.cs" />
+    <Compile Include="Model\Admin.cs" />
+    <Compile Include="Model\Classroom.cs" />
+    <Compile Include="Model\Day.cs" />
+    <Compile Include="Model\Expert.cs" />
+    <Compile Include="Model\Planning.cs" />
+    <Compile Include="Model\Session.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\Teacher.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="View\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Zitting.cs" />
-    <Page Include="Login.xaml">
+    <Compile Include="Model\Zitting.cs" />
+    <Page Include="View\Login.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -71,7 +82,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -101,23 +112,24 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\AvansLogo.png" />
+    <Resource Include="Resources\AvansLogo.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\thumb-up.png" />
+    <Resource Include="Resources\thumb-up.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\thumb_down.png" />
+    <Resource Include="Resources\thumb_down.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\paz.ico" />
+    <Resource Include="Resources\paz.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Login_bg.png" />
+    <Resource Include="Resources\Login_bg.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\LoginButtonBg.png" />
+    <Resource Include="Resources\LoginButtonBg.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
