Properties & import csv functie

--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -60,7 +60,11 @@
     <Compile Include="Model\Admin.cs" />
     <Compile Include="Model\Classroom.cs" />
     <Compile Include="Model\Day.cs" />
+    <Compile Include="Model\Daytime.cs" />
     <Compile Include="Model\Expert.cs" />
+    <Compile Include="Model\login.cs" />
+    <Compile Include="Model\Pair.cs" />
+    <Compile Include="Model\Pair_attachment.cs" />
     <Compile Include="Model\Planning.cs" />
     <Compile Include="Model\Session.cs" />
     <Compile Include="Model\Student.cs" />
@@ -129,7 +133,9 @@
   <ItemGroup>
     <Resource Include="Resources\LoginButtonBg.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
