--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -64,6 +64,7 @@
     </ApplicationDefinition>
     <Compile Include="Control\ControllerIO.cs" />
     <Compile Include="Control\PAZController.cs" />
+    <Compile Include="Model\Mappers\AdminMapper.cs" />
     <Compile Include="Model\Mappers\ExpertMapper.cs" />
     <Compile Include="Model\Mappers\Mapper.cs" />
     <Compile Include="Model\Admin.cs" />
