--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -64,11 +64,9 @@
     </ApplicationDefinition>
     <Compile Include="Control\ControllerIO.cs" />
     <Compile Include="Control\PAZController.cs" />
-
+    <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
     <Compile Include="Model\Mappers\SessionMapper.cs" />
-
     <Compile Include="Model\Mappers\AdminMapper.cs" />
-
     <Compile Include="Model\Mappers\ExpertMapper.cs" />
     <Compile Include="Model\Mappers\Mapper.cs" />
     <Compile Include="Model\Admin.cs" />
@@ -80,7 +78,7 @@
     <Compile Include="Model\Mappers\StudentMapper.cs" />
     <Compile Include="Model\Mappers\TeacherMapper.cs" />
     <Compile Include="Model\Pair.cs" />
-    <Compile Include="Model\Pair_attachment.cs" />
+    <Compile Include="Model\Mappers\Pair_attachment.cs" />
     <Compile Include="Model\PDFExport.cs" />
     <Compile Include="Model\Planning.cs" />
     <Compile Include="Model\Session.cs" />
