--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -104,6 +104,9 @@
     <Compile Include="View\SessionWindow.xaml.cs">
       <DependentUpon>SessionWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\UnPlannedPairs.xaml.cs">
+      <DependentUpon>UnPlannedPairs.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\EmailWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -125,6 +128,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\SessionWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UnPlannedPairs.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
