E-mail versturen update Het werkt niet tenzij je tijdelijk een regel uncomment in de SessionMapper, Teun moet hier nog iets op regelen.
Signed-off-by: Yorg Kuijs <yorg.kuijs@home.nl>

--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Control\PAZController.cs" />
     <Compile Include="IniReader\IniFile.cs" />
     <Compile Include="IniReader\IniSection.cs" />
+    <Compile Include="Model\Email.cs" />
     <Compile Include="Model\Emailer.cs" />
     <Compile Include="Model\Mappers\BlockedTimeslotMapper.cs" />
     <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
