E-mail template data(niet server data) wordt nu geladen uit de database i.p.v uit ini bestand.
Opslaan moet nog gebeuren.

Signed-off-by: Yorg Kuijs <yorg.kuijs@home.nl>

--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Control\IniReader\IniSection.cs" />
     <Compile Include="Model\Email.cs" />
     <Compile Include="Control\Emailer.cs" />
+    <Compile Include="Model\EmailTemplate.cs" />
     <Compile Include="Model\Mappers\BlockedTimeslotMapper.cs" />
+    <Compile Include="Model\Mappers\EmailTemplateMapper.cs" />
     <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
     <Compile Include="Model\Mappers\ClassroomMapper.cs" />
     <Compile Include="Model\Mappers\SessionMapper.cs" />
