Alle invul velden voor het nieuwe window lezen nu uit de database en schrijven ernaar terug.
Ben van plans Dinsdag de brief functie ook daadwerkelijk deze gegevens te laten gebruiken.

Signed-off-by: Yorg Kuijs <yorg.kuijs@home.nl>

--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -68,8 +68,10 @@
     <Compile Include="Model\Email.cs" />
     <Compile Include="Control\Emailer.cs" />
     <Compile Include="Model\EmailTemplate.cs" />
+    <Compile Include="Model\LetterTemplate.cs" />
     <Compile Include="Model\Mappers\BlockedTimeslotMapper.cs" />
     <Compile Include="Model\Mappers\EmailTemplateMapper.cs" />
+    <Compile Include="Model\Mappers\LetterTemplateMapper.cs" />
     <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
     <Compile Include="Model\Mappers\ClassroomMapper.cs" />
     <Compile Include="Model\Mappers\SessionMapper.cs" />
