Waarom zit studenten aan elkaar koppelen er nog niet in? Waarom gebruikt iedereen de korte variant van if else? Waarom besteed ik hier zoveel tijd aan? That's the question!

--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Control\Emailer.cs" />
     <Compile Include="Model\EmailTemplate.cs" />
     <Compile Include="Model\LetterTemplate.cs" />
-    <Compile Include="Model\Mappers\BlockedTimeslotMapper.cs" />
+    <Compile Include="View\BlockedTimeslotMapper.cs" />
     <Compile Include="Model\Mappers\EmailTemplateMapper.cs" />
     <Compile Include="Model\Mappers\LetterTemplateMapper.cs" />
     <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
