--- a/PAZ/PAZ.csproj
+++ b/PAZ/PAZ.csproj
@@ -70,10 +70,9 @@
     <Compile Include="Control\Emailer.cs" />
     <Compile Include="Model\EmailTemplate.cs" />
     <Compile Include="Model\LetterTemplate.cs" />
-    <Compile Include="View\BlockedTimeslotMapper.cs" />
+    <Compile Include="Model\Mappers\BlockedTimeslotMapper.cs" />
     <Compile Include="Model\Mappers\EmailTemplateMapper.cs" />
     <Compile Include="Model\Mappers\LetterTemplateMapper.cs" />
-    <Compile Include="Model\Mappers\PairAttachmentMapper.cs" />
     <Compile Include="Model\Mappers\ClassroomMapper.cs" />
     <Compile Include="Model\Mappers\SessionMapper.cs" />
     <Compile Include="Model\Mappers\AdminMapper.cs" />
